--- a/apply/apply.css
+++ b/apply/apply.css
@@ -28,17 +28,20 @@ p {
 .apply {
   width: 100%;
   margin-top: 0.4rem;
-  font-size: 0.17333333rem;
   color: #666;
+  font-size: 0.4rem;
+}
+.p1{
+   font-size: 50%;
 }
 .p3 {
-  font-size: 0.17333333rem;
+  font-size: 50%;
 }
 .p4 {
-  font-size: 0.17333333rem;
+   font-size: 50%;
 }
 .p6 {
-  font-size: 0.17333333rem;
+   font-size: 50%;
 }
 .money {
   width: 1.6rem;
