--- a/apply/apply.css
+++ b/apply/apply.css
@@ -32,16 +32,16 @@ p {
   font-size: 0.4rem;
 }
 .p1{
-   font-size: 50%;
+   font-size: 15px;
 }
 .p3 {
-  font-size: 50%;
+  font-size: 15px;
 }
 .p4 {
-   font-size: 50%;
+   font-size: 15px;
 }
 .p6 {
-   font-size: 50%;
+   font-size: 15px;
 }
 .money {
   width: 1.6rem;
